--- a/package.json
+++ b/package.json
@@ -1,45 +1,25 @@
 {
-  "name": "hassananwar19/mondalDist",
-  "version": "8.1.1",
-  "description": "Hierarchical Organizational Chart for Angular",
-  "keywords": [
-    "org-chart",
-    "organization",
-    "organizational chart",
-    "heirarchal chart",
-    "ng",
-    "angular",
-    "angular 2",
-    "angular 8"
-  ],
-  "author": "Ashish K Mondal",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
+  "name": "mondaldist",
+  "version": "1.0.0",
+  "description": "modification to mondal-ui to html in employee names",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hassananwar19/mondalDist.git"
+    "url": "git+https://github.com/hassananwar19/mondalDist.git"
   },
+  "keywords": [
+    "organogram"
+  ],
+  "author": "modal",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/hassananwar19/mondalDist/issues"
   },
-  "homepage": "https://github.com/hassananwar19/mondalDist",
-  "peerDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/core": "^8.0.0"
-  },
-  "main": "bundles/mondal-org-chart.umd.js",
-  "module": "fesm5/mondal-org-chart.js",
-  "es2015": "fesm2015/mondal-org-chart.js",
-  "esm5": "esm5/mondal-org-chart.js",
-  "esm2015": "esm2015/mondal-org-chart.js",
-  "fesm5": "fesm5/mondal-org-chart.js",
-  "fesm2015": "fesm2015/mondal-org-chart.js",
-  "typings": "mondal-org-chart.d.ts",
-  "metadata": "mondal-org-chart.metadata.json",
-  "sideEffects": false,
-  "dependencies": {
-    "tslib": "^1.9.0"
-  }
+  "homepage": "https://github.com/hassananwar19/mondalDist#readme"
 }
